Repair missing javadoc